# Project-Arc

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.lab.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/scripts/: verify_recon_extensions.py
backend/src/: cli.py
backend/src/agents/: __init__.py
backend/src/agents/graphs/: __init__.py  exploit_subgraph.py  post_exploit_subgraph.py  recon_subgraph.py  supervisor_graph.py  workflow.py
backend/src/agents/shared/: __init__.py  agent_protocol.py  approval_gate.py  base_agent.py  tool_executor.py
backend/src/agents/specialists/: __init__.py  exfil_agent.py  exploit_agent.py  persistence_agent.py  pivot_agent.py  post_exploit_agent.py  recon_agent.py  report_agent.py  vuln_agent.py
backend/src/agents/supervisor/: __init__.py  priority_queue.py  state.py  supervisor_agent.py  task_router.py
backend/src/api/: __init__.py  dependencies.py  main.py
backend/src/api/graphql/: __init__.py  resolvers.py  schema.py
backend/src/api/middleware/: __init__.py  correlation.py  logging.py  rate_limit.py
backend/src/api/routes/: __init__.py  agents.py  auth.py  findings.py  graph.py  health.py  missions.py  monitoring.py  projects.py  recon_tools.py  reports.py  scans.py  settings.py  targets.py  vulnerabilities.py  websocket.py
backend/src/api/websocket/: __init__.py  events.py  handler.py  streams.py
backend/src/c2/: __init__.py  sliver_client.py
backend/src/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py  monitoring.py
backend/src/graph/: __init__.py  client.py  models.py  schema_init.py  settings_store.py  utils.py
backend/src/graph/algorithms/: __init__.py  centrality.py  community.py  path_finder.py  similarity.py
backend/src/graph/projections/: __init__.py  attack_surface.py  identity_graph.py  vuln_chain.py
backend/src/graph/queries/: __init__.py  attack_queries.py  reporting_queries.py  text_to_cypher.py
backend/src/graph/schema/: attack_graph_schema.cypher  core_schema.cypher  identity_schema.cypher  indexes.cypher  mitre_schema.cypher
backend/src/intelligence/: __init__.py
backend/src/intelligence/identity/: __init__.py  ad_path_finder.py  azure_paths.py  bloodhound_engine.py  kerberos_attacks.py  privilege_paths.py
backend/src/intelligence/mitre/: __init__.py  attack_mapper.py  coverage_analyzer.py  technique_selector.py
backend/src/intelligence/pathfinding/: __init__.py  attack_path_finder.py  blast_radius.py
backend/src/intelligence/planner/: __init__.py  age_planner.py  caldera_client.py  contingency.py  mission_planner.py  tactic_planner.py
backend/src/intelligence/scoring/: __init__.py  epss_client.py  exploitability.py  impact_calculator.py  risk_scorer.py
backend/src/memory/: __init__.py  cognitive.py
backend/src/memory/episodic/: __init__.py  event_store.py  retrieval.py  session_memory.py
backend/src/memory/procedural/: __init__.py  exploit_patterns.py  failure_memory.py  playbooks.py  technique_library.py
backend/src/memory/semantic/: __init__.py  cve_knowledge.py  entity_memory.py  knowledge_base.py  vector_store.py
backend/src/memory/working/: __init__.py  attention.py  context_manager.py  goal_stack.py
backend/src/recon/: __init__.py  pipeline.py
backend/src/recon/active/: __init__.py  service_fingerprint.py
backend/src/recon/continuous/: __init__.py  alerting.py  diff_detector.py  monitor.py
backend/src/recon/orchestrators/: __init__.py  gau_orchestrator.py  github_orchestrator.py  http_probe_orchestrator.py  kiterunner_orchestrator.py  knockpy_orchestrator.py  passive_dns.py  port_scan_orchestrator.py  shodan_orchestrator.py  subdomain_enum_orchestrator.py  types.py  wappalyzer_orchestrator.py  web_crawl_orchestrator.py  whois_orchestrator.py
backend/src/recon/passive/: __init__.py  cert_transparency.py  osint_collector.py
backend/src/recon/stealth/: __init__.py  decoy_traffic.py  rate_limiter.py  tor_wrapper.py
backend/src/recon/tools/: __init__.py  base.py  dnsx.py  gau.py  github_recon.py  httpx.py  katana.py  kiterunner.py  knockpy.py  naabu.py  nuclei.py  shodan.py  subfinder.py  wappalyzer.py  whois.py
backend/src/reporting/: __init__.py
backend/src/reporting/exporters/: __init__.py  json_exporter.py  pdf_exporter.py  sarif_exporter.py
backend/src/reporting/generators/: __init__.py  compliance_report.py  executive_summary.py  remediation_report.py  report_builder.py  technical_report.py
backend/src/reporting/templates/: __init__.py  executive_summary.md  markdown_templates.py  remediation.md  technical_report.md  template_loader.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_health.py  test_projects.py  test_recon_extensions_imports.py  test_scans.py
docs/: EXTENDED_RECON_IMPLEMENTATION.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  arc_pentesting_framework_2d478447.plan.md
infrastructure/logstash/config/: logstash.yml
infrastructure/logstash/pipeline/: arc.conf
lab/: README.md
mcp/: Dockerfile.recon  health_check.py  registry.py  requirements.txt
mcp/servers/: __init__.py  bloodhound_server.py  certipy_server.py  commix_server.py  crackmapexec_server.py  curl_server.py  dnsx_server.py  gau_server.py  github_recon_server.py  gvm_server.py  havoc_server.py  httpx_server.py  impacket_server.py  katana_server.py  kiterunner_server.py  knockpy_server.py  main.py  metasploit_server.py  naabu_server.py  nikto_server.py  nuclei_server.py  proxychains_server.py  shodan_server.py  sliver_server.py  sqlmap_server.py  subfinder_server.py  tor_server.py  wappalyzer_server.py  whois_server.py
scripts/: rebuild.sh
webapp/: Dockerfile  eslint.config.mjs  next.config.js  npmw  npmw.cmd  package-lock.json  package.json  tsconfig.json  vitest.config.ts
webapp/scripts/: postinstall-devdir-tip.js  run-npm-without-devdir.js
webapp/src/app/: globals.css  layout.tsx  page.tsx
webapp/src/components/: PageTransition.tsx
webapp/src/hooks/: useWebSocket.ts
webapp/tests/: setup.ts
(+40 files in other folders)
